Adding carousel, new hero splash

--- a/src/portfolio/data.pug
+++ b/src/portfolio/data.pug
@@ -15,4 +15,6 @@
 -
 	var heroData = { 
 			linear: "linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000410 100%)",
-			img : "C:/Users/utopiafx/Dropbox/Screenshots/Screenshot 2021-01-21 171823.jpg" };
+			img : "img/s1.png",
+			preWelcomeText: "Welcome to my portfolio",
+			mainTitleText: "MAIN TITLE HERE"};
