--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -295,7 +295,14 @@ a
       padding-bottom 10px
       font-weight bold
       color #ccc
-  
+
+.section-carousel
+  overflow hidden
+  .section-carousel-inner
+    .bg-image-full
+      height 500px
+
+
 // ---- showcase section
 .showcase-text
   padding 7rem !important
