--- a/src/mixins/mixin.pug
+++ b/src/mixins/mixin.pug
@@ -148,8 +148,8 @@ mixin addBrand(name, size=1)
 mixin insertHeader(data)
 	header.master-head.text-center(style=`background-image: ${data.linear} , url(${data.img})`)
 		.header-content.container.d-flex.align-items-center.flex-column
-			h4.sub-title Welcome to my portfolio!
-			h1.main-title Main title here
+			h4.sub-title= data.preWelcomeText
+			h1.main-title= data.mainTitleText
 			a.btn.btn-primary.btn-x1.text-uppercase.js-scroll-trigger(href="#projects") Explore!
 			
 mixin insertSectionFullWidth(data)
