Updating webpack dev file adding two column card

--- a/src/portfolio/portfolio.pug
+++ b/src/portfolio/portfolio.pug
@@ -33,6 +33,31 @@ block body
 		
 		+insertSectionFullWidth(sectionFullWidthData)
 
+		section.two-column
+			.container
+				.row
+					.col-lg-12
+						h2 Two Column
+				.row.mb-4
+					.offset-lg-2.col-lg-4.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+								a.btn.btn-primary(href='#') Go somewhere
+					.col-lg-4.col-md-6.col-sm-12
+						.card.mb-4
+							img.card-img-top(src='//placehold.it/330x330' alt='...')
+							.card-body
+								h4.card-title Card title
+								h6.card-category Solo Project
+								p.card-text
+									| Some quick example text to build on the card title and make up the bulk of the card's content.
+								a.btn.btn-primary(href='#') Go somewhere
+
 		section.three-column
 			.container
 				.row
@@ -265,6 +290,7 @@ block body
 						p.mb-0 When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a p
 				.row.no-gutters.two-by-two-col-fw-bg-color-1
 					.col-lg-6.section-2x2-col-fw-img(style="background-image: url('//placehold.it/900x601');")
+						//- iframe(width='560' height='315' src='https://www.youtube-nocookie.com/embed/kCHJVw5y3mc' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 					.col-lg-6.my-auto.my-auto.section-2x2-col-fw-text
 						h2 Lorem Ipsum Title
 						p.mb-0 When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a p
