Change button layout

--- a/src/mixins/mixin.pug
+++ b/src/mixins/mixin.pug
@@ -150,7 +150,7 @@ mixin insertHeader(data)
 		.header-content.container.d-flex.align-items-center.flex-column
 			h4.sub-title= data.preWelcomeText
 			h1.main-title= data.mainTitleText
-			a.btn.btn-primary.btn-x1.text-uppercase.js-scroll-trigger(href="#projects") Explore!
+			a.btn.btn-primary.btn-x1.text-uppercase.js-scroll-trigger(href="#projects") job openings
 			
 mixin insertSectionFullWidth(data)
 	section#news.section-page
