--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -3,7 +3,7 @@
 //@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,600,700&display=swap')
 @import url('https://fonts.googleapis.com/css?family=Lato:400,500,600,700&display=swap')
 //@import '../mixins/mixin.styl'
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&display=swap');
 
 
 $basic-fonts = "Lato", "Open Sans","Helvetica Neue",Helvetica,Arial,"sans-serif"
@@ -35,12 +35,27 @@ $two-by-two-col-fw-bg-color-1 = $bg-accent-color
 
 // ---- Changing bootstrap theme
 
-.card, .btn, .form-control
+.card, .form-control
   border-radius 5px
 
 #navbar1 .navbar-nav .nav-link {
   color: silver;
 }
+
+.btn
+  border-radius 40px
+  color #fff
+  letter-spacing 3px
+  padding 15px 35px
+  border-color:  #20212c 
+  text-transform: uppercase
+  font-family: 'Nunito'
+  font-size 14px
+  font-weight 600
+  font-style normal
+  background-color #20212c
+
+
 
 //.btn-primary { background-color: $basic-link-color; }
 
