--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -54,6 +54,11 @@ $two-by-two-col-fw-bg-color-1 = $bg-accent-color
   font-weight 600
   font-style normal
   background-color #20212c
+  transition .3s opacity ease
+  &:hover
+    color #dadada
+    background-color #161829
+    border-color #161617
 
 
 
