--- a/src/portfolio/data.pug
+++ b/src/portfolio/data.pug
@@ -15,6 +15,6 @@
 -
 	var heroData = { 
 			linear: "linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000410 100%)",
-			img : "img/s1.png",
+			img : "//placehold.it/2440x1440",
 			preWelcomeText: "Welcome to my portfolio",
 			mainTitleText: "MAIN TITLE HERE"};
