--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -256,6 +256,7 @@ a
   max-width 1400px
   margin 0 auto
   overflow hidden
+  box-shadow 0px 0px 20px rgb(0 0 0)
 
 // ---- top-menu navigations
 .navbar
