--- a/src/portfolio/portfolio.styl
+++ b/src/portfolio/portfolio.styl
@@ -13,11 +13,12 @@ $bg-secondary-color = #141417 //  #141417 // #f39c12
 $bg-accent-color = #090d17 //  #141417 // #27272d
 $basic-bg-pattern = "https://www.transparenttextures.com/patterns/cross-stripes.png" // different pattern: "http://auventsbilodeau.com/images/backgrounds/dark-stripe.png"
 $basic-bg-color =  #000410; //  #141417 // different valour: #171717 // #080808 //
-$basic-text-color = #bbb
+$basic-text-color = #999
 $basic-title-color = #f1f1f1
+$header-tag-color = #f0f0f0
 $basic-link-color = #13aff0
 $basic-link-hover-color = #0b7cac
-$breadtext-color = #bbb
+$breadtext-color = #999
 $dark-text-color = #333
 $hamburger-icon-color = #13aff0
 $content-wrap-bg-pattern = none //"http://auventsbilodeau.com/images/backgrounds/dark-stripe.png"
@@ -42,12 +43,13 @@ $two-by-two-col-fw-bg-color-1 = $bg-accent-color
   color: silver;
 }
 
-.btn
+.btn, .btn-check
   border-radius 40px
   color #fff
   letter-spacing 3px
   padding 15px 35px
-  border-color:  #20212c 
+  border-color:  #20212c
+  box-shadow none
   text-transform: uppercase
   font-family: 'Nunito'
   font-size 14px
@@ -59,7 +61,19 @@ $two-by-two-col-fw-bg-color-1 = $bg-accent-color
     color #dadada
     background-color #161829
     border-color #161617
-
+  &:active
+    color #dadada
+    background-color #161829
+    border-color #161617
+  &:visited
+    color #dadada
+    background-color #161829
+    border-color #161617    
+  &:focus
+    box-shadow none
+    color #dadada
+    background-color #161829
+    border-color #161617  
 
 
 //.btn-primary { background-color: $basic-link-color; }
@@ -230,9 +244,13 @@ body
   line-height $basic-line-height
   width 100%
   height 100%
- 
+
+h2
+  color $header-tag-color
 p
   color $breadtext-color
+  letter-spacing: 0.02em;
+  word-spacing: 0.05em;  
 
 strong
   color $breadtext-color
